--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "lint:scss": "npx stylelint \"**/*.scss\"",
     "lint:scss:fix": "npx stylelint \"**/*.scss\" --fix",
     "unit": "jest --config ./config/jest/jest.config.ts",
-    "unit:coverage": "jest --config ./config/jest/jest.config.ts --collectCoverage=true"
+    "unit:coverage": "jest --config ./config/jest/jest.config.ts --collectCoverage=true",
+    "analyzer:prod": "webpack --env stats=server mode=production",
+    "analyzer:dev": "webpack --env analyzerMode=server mode=development"
   },
   "keywords": [],
   "author": "vgratsilev",
@@ -28,6 +30,7 @@
     "@types/react": "^17.0.39",
     "@types/react-dom": "^17.0.11",
     "@types/webpack": "^5.28.0",
+    "@types/webpack-bundle-analyzer": "^4.4.1",
     "@types/webpack-dev-server": "^4.7.2",
     "@typescript-eslint/eslint-plugin": "^5.12.1",
     "@typescript-eslint/parser": "^5.12.1",
@@ -58,6 +61,7 @@
     "ts-node": "^10.5.0",
     "typescript": "^4.5.5",
     "webpack": "^5.69.1",
+    "webpack-bundle-analyzer": "^4.5.0",
     "webpack-cli": "^4.10.0",
     "webpack-dev-server": "^4.7.4"
   },
