--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,4 +21,9 @@
       "module": "CommonJS"
     }
   },
+  "include": [
+    "./config/jest/setupTests.ts",
+    "./src/**/*.ts",
+    "./src/**/*.tsx",
+  ]
 }
