--- a/package.json
+++ b/package.json
@@ -11,12 +11,14 @@
     "lint:ts:fix": "eslint \"**/*.{ts,tsx}\" --fix",
     "lint:scss": "npx stylelint \"**/*.scss\"",
     "lint:scss:fix": "npx stylelint \"**/*.scss\" --fix",
-    "unit": "jest --config ./config/jest/jest.config.ts",
-    "unit:coverage": "jest --config ./config/jest/jest.config.ts --collectCoverage=true",
+    "test:unit": "jest --config ./config/jest/jest.config.ts",
+    "test:unit:coverage": "jest --config ./config/jest/jest.config.ts --collectCoverage=true",
+    "test:ui": "npx loki test",
+    "test:ui:ok": "npx loki approve",
     "analyzer:prod": "webpack --env stats=server mode=production",
     "analyzer:dev": "webpack --env analyzerMode=server mode=development",
     "storybook": "start-storybook -p 6006 -c ./config/storybook",
-    "build-storybook": "build-storybook -c ./config/storybook"
+    "storybook:build": "build-storybook -c ./config/storybook"
   },
   "keywords": [],
   "author": "vgratsilev",
@@ -64,6 +66,7 @@
     "html-webpack-plugin": "^5.5.0",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^27.5.1",
+    "loki": "^0.30.3",
     "mini-css-extract-plugin": "^2.5.3",
     "prettier": "^2.7.1",
     "react-refresh": "^0.12.0",
@@ -89,5 +92,20 @@
     "react-dom": "^17.0.2",
     "react-i18next": "^11.15.5",
     "react-router-dom": "^6.2.1"
+  },
+  "loki": {
+    "configurations": {
+      "chrome.laptop": {
+        "target": "chrome.docker",
+        "width": 1366,
+        "height": 768,
+        "deviceScaleFactor": 1,
+        "mobile": false
+      },
+      "chrome.iphone7": {
+        "target": "chrome.docker",
+        "preset": "iPhone 7"
+      }
+    }
   }
 }
