--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "test:unit:coverage": "jest --config ./config/jest/jest.config.ts --collectCoverage=true",
     "test:ui": "npx loki test",
     "test:ui:ok": "npx loki approve",
+    "test:ui:ci": "npx loki --requireReference --reactUrl file./storybook-static",
     "analyzer:prod": "webpack --env stats=server mode=production",
     "analyzer:dev": "webpack --env analyzerMode=server mode=development",
     "storybook": "start-storybook -p 6006 -c ./config/storybook",
