--- a/package.json
+++ b/package.json
@@ -16,6 +16,9 @@
     "test:ui": "npx loki test",
     "test:ui:ok": "npx loki approve",
     "test:ui:ci": "npx loki --requireReference --reactUri file:./storybook-static",
+    "test:ui:report": "npm run test:ui:json && npm run test:ui:html",
+    "test:ui:json": "node scripts/generate-visual-json-report.js",
+    "test:ui:html": "reg-cli --from .loki/report.json --report .loki/report.html",
     "analyzer:prod": "webpack --env stats=server mode=production",
     "analyzer:dev": "webpack --env analyzerMode=server mode=development",
     "storybook": "start-storybook -p 6006 -c ./config/storybook -s public",
@@ -71,6 +74,7 @@
     "mini-css-extract-plugin": "^2.5.3",
     "prettier": "^2.7.1",
     "react-refresh": "^0.12.0",
+    "reg-cli": "^0.17.6",
     "regenerator-runtime": "^0.13.9",
     "sass": "^1.49.9",
     "sass-loader": "^12.6.0",
