--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "analyzer:prod": "webpack --env stats=server mode=production",
     "analyzer:dev": "webpack --env analyzerMode=server mode=development",
     "storybook": "start-storybook -p 6006 -c ./config/storybook -s public",
-    "storybook:build": "build-storybook -c ./config/storybook -s public"
+    "storybook:build": "build-storybook -c ./config/storybook -s public",
+    "prepare": "husky install"
   },
   "keywords": [],
   "author": "vgratsilev",
@@ -89,7 +90,8 @@
     "webpack": "^5.69.1",
     "webpack-bundle-analyzer": "^4.5.0",
     "webpack-cli": "^4.10.0",
-    "webpack-dev-server": "^4.7.4"
+    "webpack-dev-server": "^4.7.4",
+    "husky": "^8.0.0"
   },
   "dependencies": {
     "@reduxjs/toolkit": "^1.8.0",
