--- a/package.json
+++ b/package.json
@@ -22,8 +22,8 @@
     "test:ui:html": "reg-cli --from .loki/report.json --report .loki/report.html",
     "analyzer:prod": "webpack --env stats=server mode=production",
     "analyzer:dev": "webpack --env analyzerMode=server mode=development",
-    "storybook": "start-storybook -p 6006 -c ./config/storybook -s public",
-    "storybook:build": "build-storybook -c ./config/storybook -s public",
+    "storybook": "start-storybook -p 6006 -c ./config/storybook",
+    "storybook:build": "build-storybook -c ./config/storybook",
     "prepare": "husky install"
   },
   "keywords": [],
@@ -50,6 +50,7 @@
     "@types/node": "^17.0.21",
     "@types/react": "^17.0.39",
     "@types/react-dom": "^17.0.11",
+    "@types/react-transition-group": "^4.4.5",
     "@types/webpack": "^5.28.0",
     "@types/webpack-bundle-analyzer": "^4.4.1",
     "@types/webpack-dev-server": "^4.7.2",
@@ -104,7 +105,8 @@
     "react-dom": "^17.0.2",
     "react-i18next": "^11.15.5",
     "react-redux": "^7.2.6",
-    "react-router-dom": "^6.2.1"
+    "react-router-dom": "^6.2.1",
+    "react-transition-group": "^4.4.5"
   },
   "loki": {
     "configurations": {
