--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "start": "webpack serve --env port=3000",
     "start:dev:server": "node ./json-server/index.js",
+    "start:dev": "concurrently \"npm run start\" \"npm run start:dev:server\"",
     "build:prod": "webpack --env mode=production",
     "build:dev": "webpack --env mode=development",
     "lint:ts": "eslint \"**/*.{ts,tsx}\"",
@@ -24,10 +25,9 @@
     "analyzer:prod": "webpack --env stats=server mode=production",
     "analyzer:dev": "webpack --env analyzerMode=server mode=development",
     "start:storybook": "start-storybook -p 6006 -c ./config/storybook",
-    "start:storybook:static": "npx http-server ./storybook-static",
-    "test:ui:static": "npx loki test --host 172.22.208.1 --port 8080",
     "storybook:build": "build-storybook -c ./config/storybook",
-    "test:all": "npm run test:unit && npm run start:storybook && npm run test:ui"
+    "start:storybook:static": "npx http-server ./storybook-static",
+    "test:ui:static": "npx loki test --host 172.22.208.1 --port 8080"
   },
   "keywords": [],
   "author": "vgratsilev",
@@ -100,6 +100,7 @@
   "dependencies": {
     "@reduxjs/toolkit": "^1.8.0",
     "axios": "^0.26.1",
+    "concurrently": "^7.5.0",
     "i18next": "^21.6.11",
     "i18next-browser-languagedetector": "^6.1.3",
     "i18next-http-backend": "^1.3.2",
