--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,39 +1,55 @@
-name: linting, testing, building
+name: linting, testing, building, deploy
 on:
   push:
-    branches: [ main ]
+    branches:
+      - main
   pull_request:
-    branches: [ main ]
+    branches:
+      - main
+permissions:
+  contents: write
 jobs:
-  pipeline:
+  Build, Lint, Test, Deploy:
     runs-on: ubuntu-latest
     strategy:
       matrix:
         node-version: [ 16.x ]
 
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v3
       - name: Staring Node.js ${{ matrix.node-version }}
         uses: actions/setup-node@v1
         with:
           node-version: ${{ matrix.node-version }}
-      - name: install modules
+
+      - name: Install modules
         run: npm ci
-      - name: build production project
+
+      - name: Build production project
         run: npm run build:prod
         if: always()
-      - name: linting typescript
+
+      - name: Linting typescript
         run: npm run lint:ts
         if: always()
-      - name: linting css
+
+      - name: Linting css
         run: npm run lint:scss
         if: always()
-      - name: unit testing
+
+      - name: Unit testing
         run: npm run test:unit
         if: always()
-      - name: build storybook
+
+      - name: Build storybook
         run: npm run storybook:build
         if: always()
-      - name: screenshot testing
+
+      - name: Screenshot testing
         run: npm run test:ui:ci
         if: always()
+
+      - name: Deploy tp gh-pages
+        uses: JamesIves/github-pages-deploy-action@v4
+        with:
+          folder: build
