--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "react-blog",
+  "homepage": "https://vgratsilev.github.io/react-blog",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
