--- a/package.json
+++ b/package.json
@@ -77,6 +77,7 @@
     "husky": "^8.0.0",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^27.5.1",
+    "jest-transform-stub": "^2.0.0",
     "json-server": "^0.17.0",
     "loki": "^0.30.3",
     "mini-css-extract-plugin": "^2.5.3",
