--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "start": "webpack serve --env port=3000",
     "start:dev:server": "node ./json-server/index.js",
     "start:dev": "concurrently \"npm run start\" \"npm run start:dev:server\"",
-    "build:prod": "webpack --env mode=production",
+    "build:prod": "webpack --env mode=production apiUrl=https://react-blog-server-olive.vercel.app/",
     "build:dev": "webpack --env mode=development",
     "lint:ts": "eslint \"**/*.{ts,tsx}\"",
     "lint:ts:fix": "eslint \"**/*.{ts,tsx}\" --fix",
@@ -61,6 +61,7 @@
     "@typescript-eslint/parser": "^5.12.1",
     "babel-loader": "^8.2.3",
     "babel-plugin-i18next-extract": "^0.8.3",
+    "copy-webpack-plugin": "^10.2.4",
     "css-loader": "^6.6.0",
     "eslint": "^8.10.0",
     "eslint-config-airbnb": "^19.0.4",
