--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "start": "webpack serve --env port=3000",
     "start:dev:server": "node ./json-server/index.js",
     "start:dev": "concurrently \"npm run start\" \"npm run start:dev:server\"",
-    "build:prod": "webpack --env mode=production apiUrl=https://react-blog-server-olive.vercel.app/",
+    "build:prod": "webpack --env mode=production apiURL=https://react-blog-server-olive.vercel.app/",
     "build:dev": "webpack --env mode=development",
     "lint:ts": "eslint \"**/*.{ts,tsx}\"",
     "lint:ts:fix": "eslint \"**/*.{ts,tsx}\" --fix",
