--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,6 +11,7 @@
     "allowSyntheticDefaultImports": true,
     "sourceMap": true,
     "strict": true,
+    "isolatedModules": true,
     "baseUrl": ".",
     "paths": {
       "*": [
