--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^14.4.3",
+    "@types/circular-dependency-plugin": "^5.0.5",
     "@types/jest": "^27.4.1",
     "@types/node": "^17.0.21",
     "@types/react": "^18.0.25",
@@ -63,12 +64,13 @@
     "@typescript-eslint/parser": "^5.12.1",
     "babel-loader": "^8.2.3",
     "babel-plugin-i18next-extract": "^0.8.3",
+    "circular-dependency-plugin": "^5.2.2",
     "copy-webpack-plugin": "^10.2.4",
     "css-loader": "^6.6.0",
     "eslint": "^8.10.0",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-config-prettier": "^8.5.0",
-    "eslint-plugin-fsd-import": "^0.0.3",
+    "eslint-plugin-fsd-import": "^0.0.4",
     "eslint-plugin-i18next": "^5.1.2",
     "eslint-plugin-import": "^2.25.4",
     "eslint-plugin-jsx-a11y": "^6.5.1",
