--- a/package.json
+++ b/package.json
@@ -112,7 +112,9 @@
   },
   "dependencies": {
     "@headlessui/react": "^1.7.4",
+    "@react-spring/web": "^9.5.5",
     "@reduxjs/toolkit": "^1.8.0",
+    "@use-gesture/react": "^10.2.23",
     "axios": "^0.26.1",
     "concurrently": "^7.5.0",
     "i18next": "^22.0.3",
