--- a/package.json
+++ b/package.json
@@ -91,6 +91,7 @@
     "html-webpack-plugin": "^5.5.0",
     "husky": "^8.0.0",
     "identity-obj-proxy": "^3.0.0",
+    "isomorphic-fetch": "^3.0.0",
     "jest": "^27.5.1",
     "jest-html-reporters": "^3.0.11",
     "jest-transform-stub": "^2.0.0",
