--- a/package.json
+++ b/package.json
@@ -96,6 +96,7 @@
     "jest-html-reporters": "^3.0.11",
     "jest-transform-stub": "^2.0.0",
     "json-server": "^0.17.0",
+    "lint-staged": "^13.1.0",
     "loki": "^0.30.3",
     "mini-css-extract-plugin": "^2.5.3",
     "postcss": "^8.4.18",
