--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -66,7 +66,7 @@ jobs:
         uses: actions/upload-pages-artifact@v1
         if: always()
         with:
-          path: '.loki'
+          path: 'reports'
 
       - name: Deploy to GitHub Pages
         id: deployment
@@ -94,8 +94,4 @@ jobs:
 
       - name: Linting css
         run: npm run lint:scss
-        if: always()
-
-      - name: unit testing
-        run: npm run test:unit
         if: always()
