Added Cypress config.

--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "lint:all": "npm run lint:ts && npm run lint:scss",
     "test:unit": "jest --config ./config/jest/jest.config.ts",
     "test:unit:coverage": "jest --config ./config/jest/jest.config.ts --collectCoverage=true",
+    "test:e2e": "cypress open",
     "test:ui": "npx loki test --port 6006",
     "test:ui:ok": "npx loki approve",
     "test:ui:ci": "npx loki --requireReference --reactUri file:./storybook-static",
@@ -129,6 +130,7 @@
     "@use-gesture/react": "^10.2.23",
     "axios": "^0.26.1",
     "concurrently": "^7.5.0",
+    "cypress": "^12.3.0",
     "i18next": "^22.0.3",
     "i18next-browser-languagedetector": "^7.0.1",
     "i18next-http-backend": "^2.0.2",
