--- a/cypress/tsconfig.json
+++ b/cypress/tsconfig.json
@@ -14,6 +14,12 @@
     "isolatedModules": false,
   },
   "include": [
-    "**/*.ts"
+    "**/*.ts",
+    "**/*.tsx",
+  ],
+  "exclude": [
+    "node_modules",
+    "cypress",
+    "./cypress.config.ts"
   ]
 }
