--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "start:dev:server": "node ./json-server/index.js",
     "start:dev": "concurrently \"npm run start\" \"npm run start:dev:server\"",
     "start:dev:vite": "concurrently \"npm run start:vite\" \"npm run start:dev:server\"",
-    "build:prod": "webpack --env mode=production apiURL=https://react-blog-server-olive.vercel.app/",
+    "build:prod": "webpack --env mode=production",
     "build:dev": "webpack --env mode=development",
     "lint:ts": "eslint \"**/*.{ts,tsx}\"",
     "lint:ts:fix": "eslint \"**/*.{ts,tsx}\" --fix",
